--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -546,8 +546,8 @@ ja:
       title: セキュリティ認証に失敗
     '429': リクエストの制限に達しました
     '500':
-      content: もうしわけありませんが、なにかが間違っています。
-      title: このページは正しくありません
+      content: もうしわけありませんが、なにかがておくれています。
+      title: このページはておくれています
     noscript_html: Mastodonのウェブアプリケーションを利用する場合はJavaScriptを有効にしてください。またはあなたのプラットフォーム向けの<a href="%{apps_path}">Mastodonネイティブアプリ</a>を探すことができます。
   exports:
     archive_takeout:
